--- a/login-style.css
+++ b/login-style.css
@@ -71,6 +71,7 @@ body {
     #login .btn.btn-custom {
         font-size: 14px;
         margin-bottom: 20px;
+
     }
 
     #login .forget {
@@ -112,4 +113,21 @@ body {
 
     #footer a {
         color: inherit;
+    }
+
+    
+    .btn span.glyphicon {    			
+        opacity: 0;				
+    }
+    .btn.active span.glyphicon {				
+        opacity: 1;				
+    }
+
+    #topbar li{
+        list-style:none;
+        padding:10px;
+        display:inline-block; 
+    }
+    #topbar li a {
+          
     }
